Fix sidebar and CRUD mappings in Gestión

--- a/frontEnd/src/app/components/gestion/gestion.component.html
+++ b/frontEnd/src/app/components/gestion/gestion.component.html
@@ -4,7 +4,7 @@
       <ul class="ULestilo">
         <li class="FlexLista"><a href="/ot"><img class="imgIcono" src="https://frsc.cvg.utn.edu.ar/theme/image.php/snap/theme/1741635814/img/logo" alt=""></a></li>
         <li class="FlexLista dropdown">
-          <a href="/ot" class="txtNav txtNavOt dropbtn" *ngIf="isAdmin">Orden de Trabajo</a>
+          <a href="/ot" class="txtNav txtNavOt dropbtn">Orden de Trabajo</a>
         </li>
         <li class="FlexLista">
           <a class="txtNav" href="/historial">Historial</a>
