--- a/frontEnd/src/app/components/login/login.component.html
+++ b/frontEnd/src/app/components/login/login.component.html
@@ -1,4 +1,8 @@
 <div class="wrapper">
+  <div class="info-container">
+    <h1 class="system-title">Sistema de Gestión de Mantenimiento UTN FRVT</h1>
+    <p class="system-description">Gestione órdenes de trabajo, activos y operarios de forma integral.</p>
+  </div>
   <input type="checkbox" id="toggle" class="toggle">
   <div class="toggle-row">
     <span class="toggle-label">Ingresar</span>
