--- a/frontEnd/src/app/components/orden-trabajo/orden-trabajo.component.html
+++ b/frontEnd/src/app/components/orden-trabajo/orden-trabajo.component.html
@@ -101,7 +101,7 @@
         </div>
 
         <div class="form-group formBottom">
-          <input class="inputFormOT inputDate" #fechaInput type="date" placeholder="Ingrese información">
+          <input class="inputFormOT inputDate" #fechaInput type="date" [max]="maxFecha" placeholder="Ingrese información">
         </div>
 
 
