--- a/frontEnd/src/app/components/login/login.component.html
+++ b/frontEnd/src/app/components/login/login.component.html
@@ -1,4 +1,6 @@
 <div class="wrapper">
+  <h1 class="app-title">Sistema de Gestión de Mantenimiento UTN FRVT</h1>
+  <p class="system-details">Gestione órdenes de trabajo, activos y tareas de manera centralizada.</p>
   <input type="checkbox" id="toggle" class="toggle">
   <div class="toggle-row">
     <span class="toggle-label">Ingresar</span>
