--- a/frontEnd/src/app/components/gestion/gestion.component.html
+++ b/frontEnd/src/app/components/gestion/gestion.component.html
@@ -45,7 +45,14 @@
             </table>
           </div>
         </div>
-      </div>
-    </main>
+    </div>
+  </main>
+  </div>
+  <div class="notification" *ngIf="showNotification" [ngClass]="{
+      'success': notificationType === 'success',
+      'error': notificationType === 'error',
+      'info': notificationType === 'info'
+    }">
+    {{ notificationMessage }}
   </div>
 </body>
