--- a/frontEnd/src/app/components/historial/historial.component.css
+++ b/frontEnd/src/app/components/historial/historial.component.css
@@ -83,6 +83,7 @@ body {
   border-radius: 10px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
   overflow: hidden;
+  table-layout: fixed;
 }
 
 .tabla-ot th,
@@ -91,6 +92,7 @@ body {
   text-align: center;
   border-bottom: 1px solid #ddd;
   font-size: 15px;
+  word-break: break-word;
 }
 
 .tabla-ot thead {
@@ -105,6 +107,10 @@ body {
 
 .tabla-ot tbody tr:hover {
   background-color: #e6f0fa;
+}
+
+.tabla-ot td:nth-child(9) {
+  width: 200px;
 }
 
 /* BOTONES ACCIONES */
