--- a/frontEnd/src/app/components/login/login.component.css
+++ b/frontEnd/src/app/components/login/login.component.css
@@ -17,10 +17,10 @@ body {
 
 .app-title {
   font-family: 'Segoe UI', sans-serif;
-  font-size: 24px;
-  font-weight: 600;
+  font-size: 32px;
+  font-weight: 700;
   text-align: center;
-  margin-bottom: 4px;
+  margin-bottom: 12px;
 }
 
 .system-details {
@@ -28,7 +28,7 @@ body {
   font-size: 15px;
   text-align: center;
   max-width: 340px;
-  margin-bottom: 20px;
+  margin: 10px 0 20px;
   line-height: 1.4;
 }
 
