--- a/frontEnd/src/app/components/orden-trabajo/orden-trabajo.component.css
+++ b/frontEnd/src/app/components/orden-trabajo/orden-trabajo.component.css
@@ -137,6 +137,7 @@ body {
   border: none;
   border-radius: 6px;
   font-size: 16px;
+  cursor: pointer;
   transition: background-color 0.3s;
 }
 .btn-submit:hover {
