--- a/frontEnd/src/app/components/gestion/gestion.component.css
+++ b/frontEnd/src/app/components/gestion/gestion.component.css
@@ -96,6 +96,11 @@ body {
 
 .arrow {
   margin-left: auto;
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid #fff;
 }
 
 .seccion {
